--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -11,12 +11,12 @@ $grid-gap: 20px; // Расстояние между колонками
 // ##########
 // Цвета
 // ##########
-$color-main: blue; // Основной цвет сайта
-$color-placeholder: #777; // Основной цвет для placeholder
-$color-input: black; // Основной цвет input, select и textarea
+$color-main: #f9ae17; // Основной цвет сайта
+$color-placeholder: #d2d3d3; // Основной цвет для placeholder
+$color-input: #1b1c1f; // Основной цвет input, select и textarea
 
 // ##########
 // Шрифты
 // ##########
-$font-main: Arial, sans-serif; // Основной шрифт сайта
+$font-main: 'Roboto', Arial, sans-serif; // Основной шрифт сайта
 $font-second: Times New Roman, sans-serif; // Дополнительный шрифт
