--- a/app/layouts/default.pug
+++ b/app/layouts/default.pug
@@ -1,9 +1,11 @@
 include ../../node_modules/bemto.pug/bemto
 include ../blocks/grid/grid
+include ../blocks/layout/layout
+include ../components/sidebar/sidebar
 
 doctype html
 html(lang='ru')
   include head
   body
-    block content
+    +layout
     script(src='assets/scripts/app.min.js')
