--- a/app/blocks/tabs/tabs.scss
+++ b/app/blocks/tabs/tabs.scss
@@ -21,8 +21,10 @@
     border-bottom: 4px solid transparent;
     text-align: center;
     display: flex;
-    padding: 15px 18px 13px;
+    padding: 2px 18px 0;
     text-transform: uppercase;
     letter-spacing: 0.02em;
+    height: 100%;
+    align-items: center;
   }
 }
