--- a/app/styles/helpers/_basics.scss
+++ b/app/styles/helpers/_basics.scss
@@ -111,4 +111,5 @@ select, input, textarea, button {
   padding: 0;
   border: 0;
   border-radius: 0; // Убираем авто-закругление углов на iOS
+  font-family: $font-main;
 }
