--- a/app/blocks/search-bar/search-bar.scss
+++ b/app/blocks/search-bar/search-bar.scss
@@ -8,6 +8,7 @@
     font-weight: 500;
     background-color: transparent;
     margin-left: 23px;
+    height: 100%;
 
     &::placeholder {
       color: #797b7c;
