--- a/app/components/actions-header/actions-header.scss
+++ b/app/components/actions-header/actions-header.scss
@@ -1,7 +1,8 @@
 .actions-header {
   display: flex;
-  height: 56px;
+  height: 58px;
   background-color: #f7f7f7;
+  border-top: 1px solid #D2D3D3;
   box-shadow: 0 1px 2px rgba(211, 211, 211, 0.75);
   padding: 8px;
 
@@ -14,5 +15,8 @@
     &:not(:last-child) { margin-right: 15px; }
   }
 
-  &__search-bar { width: 100%; }
+  &__search-bar {
+    width: 100%;
+    height: 100%;
+  }
 }
