--- a/app/styles/helpers/_mixins.scss
+++ b/app/styles/helpers/_mixins.scss
@@ -175,7 +175,7 @@ div {
   @include visual-hide;
 }
 */
-@mixin visual-hide() {
+@mixin visual-hide {
   margin: 0;
   padding: 0;
   width: 0;
@@ -197,6 +197,22 @@ div {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+/*
+Миксин для быстрого выравнивания картинки по центру
+Пример использования:
+div {
+  @include center-image;
+}
+*/
+@mixin center-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
 }
 
 /*
