--- a/app/blocks/layout/layout.pug
+++ b/app/blocks/layout/layout.pug
@@ -1,6 +1,7 @@
 mixin layout()
   +b.layout&attributes(attributes)
     +e.left
-      block layout-left
+      +e.scroll
+        block layout-left
     +e.right
       block layout-right
