--- a/app/blocks/tabs/tabs.scss
+++ b/app/blocks/tabs/tabs.scss
@@ -24,7 +24,7 @@
     display: flex;
     padding: 2px 18px 0;
     text-transform: uppercase;
-    letter-spacing: 0.02em;
+    letter-spacing: .02em;
     height: 100%;
     align-items: center;
   }
