--- a/app/components/sidebar/sidebar.scss
+++ b/app/components/sidebar/sidebar.scss
@@ -12,7 +12,7 @@
     padding: 11px 10px 15px;
     text-align: center;
 
-    &:hover { opacity: .7 }
+    &:hover { opacity: .7; }
 
     svg {
       fill: $color-main;
