--- a/app/blocks/aside-menu/aside-menu.scss
+++ b/app/blocks/aside-menu/aside-menu.scss
@@ -42,10 +42,10 @@
 
     &.active, &:hover {
       .aside-menu__icon, .aside-menu__text { opacity: 1; }
+
       .aside-menu__link {
         border-color: transparent;
         background-color: #2b2f31;
-        border-color: transparent;
         box-shadow: inset 2px 0 0 $color-main;
       }
       & + .aside-menu__item .aside-menu__link { border-top-color: transparent; }
@@ -62,7 +62,7 @@
   }
 
   .aside-menu__icon, .aside-menu__text {
-    opacity: 0.75;
+    opacity: .75;
     transition: all .25s ease-in-out;
   }
 
