--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -1,5 +1,4 @@
 .button {
-  display: inline-block;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -10,10 +9,10 @@
     font-size: 14px;
     color: white;
     font-weight: 500;
-    letter-spacing: 0.05em;
+    letter-spacing: .05em;
     border-radius: 3px;
     background-color: #0cce6b;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, .4), 0 1px 2px rgba(0, 0, 0, .3);
     text-transform: uppercase;
     border: 1px solid #0ab55d;
 
