--- a/app/blocks/table/table.scss
+++ b/app/blocks/table/table.scss
@@ -5,7 +5,7 @@
     display: flex;
     border-bottom: 1px solid #d2d3d3;
 
-    .table__col:not(:last-child) {border-color: #d2d3d3}
+    .table__col:not(:last-child) { border-color: #d2d3d3; }
   }
 
   &__checkbox {
@@ -72,7 +72,7 @@
     flex-wrap: wrap;
     min-width: 0;
 
-    &_width_90  { width: 90px;  }
+    &_width_90 { width: 90px; }
     &_width_100 { width: 100px; }
     &_width_120 { width: 120px; }
     &_width_140 { width: 140px; }
@@ -109,7 +109,7 @@
     font-size: 11px;
     font-weight: 500;
     color: #959698;
-    letter-spacing: 0.05em;
+    letter-spacing: .05em;
     padding: 5px;
     border: 1px solid #e6e6e6;
     border-radius: 2px;
