--- a/app/components/actions-header/actions-header.scss
+++ b/app/components/actions-header/actions-header.scss
@@ -2,8 +2,8 @@
   display: flex;
   height: 58px;
   background-color: #f7f7f7;
-  border-top: 1px solid #D2D3D3;
-  box-shadow: 0 1px 2px rgba(211, 211, 211, 0.75);
+  border-top: 1px solid #d2d3d3;
+  box-shadow: 0 1px 2px rgba(211, 211, 211, .75);
   padding: 8px;
 
   &__col {
