--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -5,6 +5,7 @@ include ../../blocks/search-bar/search-bar
 include ../../blocks/table/table
 include ../../blocks/checkbox/checkbox
 include ../../blocks/partial-button/partial-button
+include ../../blocks/popup/popup
 include ../../components/header/header
 include ../../components/actions-header/actions-header
 
@@ -662,4 +663,3 @@ block layout-right
               +table-text 28.04.2017
               +table-text._size_small 12:23:32
           +table-col._width_260
-
