--- a/app/blocks/popup/popup.pug
+++ b/app/blocks/popup/popup.pug
@@ -6,7 +6,7 @@ include ../icon/icons
 //- content, нужно помещять в отдельный компонент..
 
 //- показать/скрыть попап - $('#myPopup').trigger('popup:show') или 'popup:hide'
-//- или по клику на кнопку +button(href='#' data-target-popup='#test;).js-show-popup
+//- или по клику на кнопку +button(href='#' data-target-popup='#test').js-show-popup
 
 mixin popup(heading)
   +b.popup&attributes(attributes)
