--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -34,4 +34,22 @@
 
     &:hover { box-shadow: 0 2px 4px rgba(0, 0, 0, .1), inset 0 2px 0 #fff; }
   }
+
+  &_text_green {
+    color: #0c6;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+
+    &:hover { color: #0ee877; }
+  }
+
+  &_text_red {
+    color: #ed1c24;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+
+    &:hover { color: #ff333a; }
+  }
 }
