--- a/app/blocks/icon-button/icon-button.scss
+++ b/app/blocks/icon-button/icon-button.scss
@@ -8,10 +8,45 @@
   padding: 9px;
   min-height: 40px;
 
+  &_uppercase {
+    text-transform: uppercase;
+  }
+
   &:hover {
     background-color: white;
+    color: #555;
 
     .icon-button__icon { fill: #555; }
+  }
+
+  &_shadow {
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .1), inset 0 2px 0 #fff;
+    background-color: #f6f6f6;
+  }
+
+  &_green {
+    background-color: #0c6;
+    border-color: #0bb55d;
+
+    &.icon-button_shadow {
+      box-shadow: 0 1px 2px rgba(0, 0, 0, .1), inset 0 2px 1px rgba(255, 255, 255, .2);
+    }
+
+    .icon-button__icon { fill: #fff; }
+
+    &:hover {
+      background-color: #17de78;
+      color: #fff;
+
+      .icon-button__icon { fill: #fff; }
+    }
+  }
+
+  &_size_small {
+    padding: 0;
+    width: 32px;
+    height: 32px;
+    min-height: initial;
   }
 
   &__icon {
@@ -19,5 +54,13 @@
     width: 19px;
     height: 19px;
     transition: all .25s ease-in-out;
+  }
+
+  &__text {
+    color: #797b7c;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    padding-left: 17px;
   }
 }
