--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -5,6 +5,7 @@ include ../../blocks/search-bar/search-bar
 include ../../blocks/table/table
 include ../../blocks/checkbox/checkbox
 include ../../blocks/partial-button/partial-button
+include ../../blocks/icon-menu/icon-menu
 include ../../components/header/header
 include ../../components/actions-header/actions-header
 include ../../components/add-to-blacklist/add-to-blacklist
