--- a/app/blocks/inner-sidebar/inner-sidebar.scss
+++ b/app/blocks/inner-sidebar/inner-sidebar.scss
@@ -8,6 +8,7 @@
   &__item {
     display: block;
     padding: 20px 13px 20px 22px;
+    box-sizing: content-box;
 
     &_menu {
       padding: 12px 13px 12px 0;
