--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -8,6 +8,7 @@ include ../../blocks/partial-button/partial-button
 include ../../components/header/header
 include ../../components/actions-header/actions-header
 include ../../components/add-to-blacklist/add-to-blacklist
+include ../../components/search-filter/search-filter
 
 block head
   - var pageTitle = 'RPS — Главная'
@@ -18,7 +19,8 @@ block layout-left
 block layout-right
   +header
   +b.index.page
-    //div(style="width: 100vw; height: 100vh; background-color: #fff; position: fixed; top: 0; left: 0; z-index: 9999; padding: 50px;")
+    div(style="width: 100vw; height: 100vh; background-color: #cecece; position: fixed; top: 0; left: 0; z-index: 9999; padding: 50px;")
+      +search-filter
 
     +add-to-blacklist
     +actions-header
