add clients-common-info (popup) component

--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -9,6 +9,10 @@
     text-transform: uppercase;
   }
 
+  &_align_center {
+    justify-content: center;
+  }
+
   &_green {
     font-size: 14px;
     color: white;
