--- a/app/blocks/inner-sidebar/inner-sidebar.scss
+++ b/app/blocks/inner-sidebar/inner-sidebar.scss
@@ -1,5 +1,6 @@
 .inner-sidebar {
-  display: block;
+  display: flex;
+  flex-direction: column;
   width: 237px;
   height: 100%;
   background-color: #efefef;
@@ -14,8 +15,8 @@
       padding: 12px 13px 12px 0;
     }
 
-    &:not(:last-child) {
-      border-bottom: 1px solid #d9d9d9;
+    &:not(:first-child) {
+      border-top: 1px solid #d9d9d9;
     }
   }
 }
