--- a/app/blocks/popup/popup.scss
+++ b/app/blocks/popup/popup.scss
@@ -24,7 +24,8 @@
   }
 
   &__content {
-    display: block;
+    display: flex;
+    flex-direction: column;
     height: 100%;
     box-shadow: -2px 0 4px rgba(0, 0, 0, .5);
     background-color: #fff;
@@ -63,5 +64,7 @@
 
   &__body {
     display: block;
+    width: 100%;
+    height: 100%;
   }
 }
