feat(add-client-dropdown): add component add-client-dropdown

--- a/app/blocks/dropdown/dropdown.pug
+++ b/app/blocks/dropdown/dropdown.pug
@@ -1,3 +1,6 @@
 mixin dropdown()
   +b.dropdown&attributes(attributes)
     block
+
+mixin dropdown-overlay()
+  +b.dropdown-overlay&attributes(attributes)
