--- a/app/blocks/dropdown/dropdown.scss
+++ b/app/blocks/dropdown/dropdown.scss
@@ -1,3 +1,36 @@
 .dropdown {
-  display: block;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  margin-top: 8px;
+  z-index: 55;
+  display: none;
+  overflow-y: auto;
+
+  &_loading {
+    pointer-events: none !important;
+    opacity: 0 !important;
+    display: block !important;
+  }
+
+  &_active {
+    display: block;
+  }
+
+  &-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    transform: translate3d(0, 0, 0);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .15);
+    z-index: 40;
+    display: none;
+
+    &_active {
+      display: block;
+    }
+  }
 }
