--- a/app/blocks/inner-sidebar/inner-sidebar.scss
+++ b/app/blocks/inner-sidebar/inner-sidebar.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 237px;
-  height: 100%;
+  flex: 0 0 237px;
   background-color: #efefef;
   border-right: 1px solid #d9d9d9;
 
