--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -9,6 +9,7 @@ include ../../blocks/partial-button/partial-button
 include ../../components/header/header
 include ../../components/actions-header/actions-header
 include ../../components/add-client-dropdown/add-client-dropdown
+include ../../components/search-filter/search-filter
 
 block head
   - var pageTitle = 'RPS — Главная'
@@ -24,7 +25,9 @@ block layout-right
         +button(href="#" data-target-dropdown='#add-client-dropdown')._green.js-show-dropdown Добавить клиента
         +add-client-dropdown
       +actions-header-col._flexible
-        +search-bar('Введите название партнёра, название или адрес объекта')._white.__search-bar
+        //- TODO УБРАТЬ АКТИВАЦИЮ DROPDOWN С ПОЛЯ ВВОДА
+        +search-bar('Введите название партнёра, название или адрес объекта')(data-target-dropdown='#search-filter-dropdown')._white.__search-bar.js-show-dropdown
+        +search-filter
       +actions-header-col
         +icon-button('icon-settings')(href="#")
 
