--- a/app/blocks/tags/tags.scss
+++ b/app/blocks/tags/tags.scss
@@ -4,6 +4,34 @@
   margin-right: -5px;
   margin-bottom: -5px;
 
+  &_deletable {
+    flex-wrap: nowrap;
+    margin-bottom: 0;
+    margin-right: 0;
+
+    .tags {
+
+      &__item {
+        display: flex;
+        margin-bottom: 0;
+        cursor: pointer;
+
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+
+      &__text {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0 8px;
+        height: 24px;
+        font-weight: 500;
+      }
+    }
+  }
+
   &__item {
     margin-right: 5px;
     margin-bottom: 5px;
@@ -38,5 +66,23 @@
     color: #202325;
     font-size: 12px;
     font-weight: 400;
+
+    &_left_radius {
+      border-radius: 3px 0 0 3px;
+    }
+
+    &_right_radius {
+      border-radius: 0 3px 3px 0;
+    }
+  }
+
+  &__icon {
+    width: 10px;
+    height: 10px;
+    fill: #000;
+  }
+
+  &__close {
+    margin-left: 1px;
   }
 }
