--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -51,6 +51,7 @@ block layout-right
             +table-text
               a(href="#")
                 b Novotel Moscow City
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -75,6 +76,7 @@ block layout-right
             +table-text
               a(href="#")
                 b ООО «ПТК»
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -98,6 +100,7 @@ block layout-right
             +table-text
               a(href="#")
                 b Сбербанк
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -121,6 +124,7 @@ block layout-right
             +table-text
               a(href="#")
                 b Globalone
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -170,6 +174,7 @@ block layout-right
             +table-text
               a(href="#")
                 b Газпром
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -193,6 +198,7 @@ block layout-right
             +table-text
               a(href="#")
                 b ООО «Робот-Икс»
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -242,6 +248,7 @@ block layout-right
             +table-text
               a(href="#")
                 b Energizer
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -265,6 +272,7 @@ block layout-right
             +table-text
               a(href="#")
                 b 7Days
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -289,6 +297,7 @@ block layout-right
             +table-text
               a(href="#")
                 b ВТБ 24
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -312,6 +321,7 @@ block layout-right
             +table-text
               a(href="#")
                 b Sun Clinic
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -335,6 +345,7 @@ block layout-right
             +table-text
               a(href="#")
                 b Хостел Сити
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -358,6 +369,7 @@ block layout-right
             +table-text
               a(href="#")
                 b Novotel Moscow City
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -382,6 +394,7 @@ block layout-right
             +table-text
               a(href="#")
                 b ООО «ПТК»
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -405,6 +418,7 @@ block layout-right
             +table-text
               a(href="#")
                 b Сбербанк
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -428,6 +442,7 @@ block layout-right
             +table-text
               a(href="#")
                 b Globalone
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -477,6 +492,7 @@ block layout-right
             +table-text
               a(href="#")
                 b Газпром
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -500,6 +516,7 @@ block layout-right
             +table-text
               a(href="#")
                 b ООО «Робот-Икс»
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -549,6 +566,7 @@ block layout-right
             +table-text
               a(href="#")
                 b Energizer
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -572,6 +590,7 @@ block layout-right
             +table-text
               a(href="#")
                 b 7Days
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -596,6 +615,7 @@ block layout-right
             +table-text
               a(href="#")
                 b ВТБ 24
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -619,6 +639,7 @@ block layout-right
             +table-text
               a(href="#")
                 b Sun Clinic
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -642,6 +663,7 @@ block layout-right
             +table-text
               a(href="#")
                 b Хостел Сити
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
