fix table index

--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -150,6 +150,7 @@ block layout-right
                 a(href="#")
                   b Иванов Дмитрий Евгеньевич
               +table-text._grey Сбербанк
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -224,6 +225,7 @@ block layout-right
                 a(href="#")
                   b Александрова Александра Александровна
               +table-text._grey Газпром
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text
               | Физ. лицо
@@ -468,6 +470,7 @@ block layout-right
                 a(href="#")
                   b Иванов Дмитрий Евгеньевич
               +table-text._grey Сбербанк
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text Компания
           +table-col._width_100._align_center
@@ -542,6 +545,7 @@ block layout-right
                 a(href="#")
                   b Александрова Александра Александровна
               +table-text._grey Газпром
+            +icon-button('icon-caret')(href='#')._shadow.__toggle
           +table-col._width_120
             +table-text
               | Физ. лицо
